[tool.poetry]
name = "fix_my_functions"
version = "0.1.0"
description = ""
authors = ["Peder Bergebakken Sundt <pbsds@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
redbaron = ">=0.9.2"
colorama = ">=0.4.4"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = ">=1.3.3"}
pdoc3 = ">=0.10.0"

[tool.poetry.scripts]
fix_my_functions  = 'fix_my_functions.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
